--- a/自述文件.md
+++ b/自述文件.md
@@ -1,26 +1,18 @@
-# is mi
-
-很久以前，在我还是个孩子的时候。
-
-那时，我还在上学，我的英语很烂（虽然，但是，现在更烂）。
-
-在英语课上，老师让我到讲台上写英语单词。
-
-我写了“this is mi”。
-
-我的同学们看到都笑死（请观看大型记录片之《消失的同学》）了，
-
-然后他们叫我“is mi”
+# create a node package module
 
 ## 安装
 
 ```sh
-npm install  -g  ismi
+npm install  -g  create-a-npm
+```
+
+## 使用
+
+```sh
+# 非必要不安装，因为可以直接使用
+npm create a-npm
 ```
 
 ## 其他语言
 
-<table><tr>
-<td><a href="https://github.com/lmssee/ismi/blob/main/ReadMe.md"  target="_self">英语</a></td>
-<td><a href="https://github.com/lmssee/ismi/blob/main/自述文件.md"  target="_self">Chinese</a></td>
-</tr></table>
+[英语](https://github.com/lmssee/create-npk/blob/main/README.md) [Chinese](https://github.com/lmssee/ismi/blob/main/自述文件.md)
